--- a/sismul1.html
+++ b/sismul1.html
@@ -52,19 +52,19 @@
     <!-- page header -->
     <header id="home" class="header">
         <div class="overlay"></div>
-        <div class="header-content container" style="position: relative; margin-left: -25px; float: left;">
-            <ol>
-                <li><a href="/assets/RehanSismul/The Lantis  Lampu Merah.mp4">MP4</a></li>
-                <li><a href="/assets/RehanSismul/The Lantis  Lampu Merah_converted.avi">AVI</a></li>
-                <li><a href="/assets/RehanSismul/The Lantis  Lampu Merah_converted.wmv">WMV</a></li>
-                <li><a href="/assets/RehanSismul/The Lantis  Lampu Merah_converted.mov">MOV</a></li>
-                <li><a href="/assets/RehanSismul/The Lantis  Lampu Merah_converted.flv">FLV</a></li>
-                <li><a href="/assets/RehanSismul/The Lantis  Lampu Merah_converted.mkv">MKV</a></li>
-                <li><a href="/assets/RehanSismul/The Lantis  Lampu Merah_converted.webm">WEBM</a></li>
-                <li><a href="/assets/RehanSismul/The Lantis  Lampu Merah_converted.asf">ASF</a></li>
-                <li><a href="/assets/RehanSismul/The Lantis  Lampu Merah_converted.ogg">OGG</a></li>
-                <li><a href="/assets/RehanSismul/The Lantis  Lampu Merah_converted.3gp">3GP</a></li>
-                </ol>
+        <div class="header-content container" style="position: relative; margin-left: 300px; float: right;">
+            <h2 style="margin-left: 0px; text-align: center;">10 EKSTENSI </h2>
+            <p style="text-align: center; margin-left:0px;">Berikut adalah 10 ekstensi yang biasa digunakan untuk video</p>
+                <a href="/assets/pideo/The Lantis  Lampu Merah.mp4">MP4 |</a>
+                <a href="/assets/pideo/The Lantis  Lampu Merah_converted.avi">AVI |</a>
+                <a href="/assets/pideo/The Lantis  Lampu Merah_converted.wmv">WMV |</a>
+                <a href="/assets/pideo/The Lantis  Lampu Merah_converted.mov">MOV |</a>
+                <a href="/assets/pideo/The Lantis  Lampu Merah_converted.flv">FLV |</a>
+                <a href="/assets/pideo/The Lantis  Lampu Merah_converted.mkv">MKV |</a>
+                <a href="/assets/pideo/The Lantis  Lampu Merah_converted.webm">WEBM |</a>
+                <a href="/assets/pideo/The Lantis  Lampu Merah_converted.asf">ASF |</a>
+                <a href="/assets/pideo/The Lantis  Lampu Merah_converted.ogg">OGG |</a>
+                <a href="/assets/pideo/The Lantis  Lampu Merah_converted.3gp">3GP </a>
         </div>              
     </header><!-- end of page header -->
 
