--- a/index.html
+++ b/index.html
@@ -17,55 +17,30 @@
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
 
-    <!-- Page Navbar -->
-    <nav class="custom-navbar" data-spy="affix" data-offset-top="20">
-        <div class="container">        
-            <ul class="nav">
-                <li class="item">
-                    <a class="link" href="#home">Home</a>
-                </li>
-                <li class="item">
-                    <a class="link" href="#about">About</a>
-                </li>
-                <li class="item">
-                    <a class="link" href="#portfolio">Portfolio</a>
-                </li>
-                <li class="item">
-                    <a class="link" href="#testmonial">Categories</a>
-                </li>
-                <li class="item">
-                    <a class="link" href="#blog">Blog</a>
-                </li>
-                <li class="item">
-                    <a class="link" href="#contact">Contact</a>
-                </li>
-         
-            </ul>
-            <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic">
-                <div class="hamburger-box">
-                  <div class="hamburger-inner"></div>
-                </div>
-            </a>
-        </div>          
-    </nav><!-- End of Page Navbar -->
-
     <!-- page header -->
     <header id="home" class="header">
         <div class="overlay"></div>
         <div class="header-content container">
-            <div class="row">
+            
+            <h1 class="header-title">
+                <span class="down">Rehandra</span>
+            </h1>
+            <p class="header-subtitle">I am a student | Riau University</p>            
+            <p class="header-subtitle"></p>    
+            <div class="row" style="justify-content: center;">
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card-up">
                         <div class="body">
-                            <img src="assets/imgs/coding.png" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" class="icon">
+                            <img src="assets/imgs/github.png" alt="" class="icon">
                             <h6 class="title" title="Progamming">Code</h6>
+                            <a href="https://github.com/Rehandra145" class="subtitle" style="margin-left: -25px;"><p>GitHub</p></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card-up">
                         <div class="body">
-                            <img src="assets/imgs/homework.png" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" class="icon">
+                            <img src="assets/imgs/homework.png"  class="icon">
                             <h6 class="title">Multimedia</h6>
                             <a href="./tugas.html" class="subtitle" style="margin-left: -20px;"><p>Tugas</p></a>
                         </div>
@@ -74,151 +49,19 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card-up">
                         <div class="body">
-                            <img src="assets/imgs/sound.png" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" class="icon">
+                            <img src="assets/imgs/instagram.png" alt="" class="icon">
                             <h6 class="title">Musik</h6>
-                            <p class="subtitle"></p>
+                            <a href="https://www.instagram.com/handeraaa" class="subtitle" style="margin-left: -28px;"><p>Sosmed</p></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3">
-                    <div class="service-card-up">
-                        <div class="body">
-                            <img src="assets/imgs/scooter.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" class="icon">
-                            <h6 class="title">Riding</h6>
-                            <p class="subtitle"></p>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- end of row -->
-            <h1 class="header-title">
-                <span class="down">Rehandra</span>
-            </h1>
-            <p class="header-subtitle">I am a student | Riau University</p>            
-            <p class="header-subtitle"></p>            
-            <a href="#portfolio-section" class="btn btn-primary">Visit My Works</a>
+            </div><!-- end of row -->        
+            <!--<a href="#portfolio-section" class="btn btn-primary">Visit My Works</a>-->
+
         </div>              
     </header><!-- end of page header -->
 
-    <!-- about section -->
-    <section class="section pt-0" id="about">
-        <!-- container -->
-        <div class="container text-center">
-            <!-- about wrapper -->
-            <div class="about">
-                <div class="about-img-holder">
-                    <img src="assets/imgs/Rehan1.png" class="about-img float-mid" style="width: 50%;"="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
-                </div>
-                <div class="about-caption">
-                    <p class="section-subtitle">Who Am I ?</p>
-                    <h2 class="section-title mb-3">About Me</h2>
-                    <p>
-                        Halo, Selamat datang! nama saya Rehandra saya biasa dipanggil rehan, saya adalah seorang mahasiswa Teknik Informatika dari jurusan Teknik Elektro Universitas Riau. Saya kelahiran 2004 dan sekarang sudah berumur 19 tahun, saya berasal dari Sumatera Barat yang sekarang sedang menempuh jenjang pendidikan perguruan tinggi di Universitas Riau yang kita cintai ini!!
-                        <br>Salam kenal ya!!!.
-                    </p>
-                </div>              
-            </div><!-- end of about wrapper -->
-        </div><!-- end of container -->
-    </section> <!-- end of about section -->
 
-
-    <!-- portfolio section -->
-    <section id="portfolio-section">
-        <div class="container text-center">
-            <p class="section-subtitle">What did i have done ?</p>
-            <h6 class="section-title mb-6">Portfolio</h6>
-            <p class="section-subtitle">sadly, due to an accident. i don't have something to show you</p>
-        </div><!-- end of container -->
-    </section> <!-- end of portfolio section -->
-
-   
-
-  
-
-    <!-- testimonial section -->
-    <section class="section" id="testmonial">
-        <div class="container text-center">
-            <p class="section-subtitle">What Did i do?</p>
-            <h6 class="section-title mb-6">Coming soon!!</h6>
-            <p class ="section-subtitle">Stay tune !!</p>
-
-            <!-- blog section -->
-    <section class="section" id="blog">
-        <!-- container -->
-        <div class="container text-center">
-            <p class="section-subtitle">Recent Posts?</p>
-            <h6 class="section-title mb-6">Blog</h6>
-            <!-- blog-wrapper -->
-            <div class="blog-card">
-                <div class="blog-card-header">
-                    <img src="assets/imgs/img-1.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
-                </div>
-                <div class="blog-card-body">
-                    <h5 class="blog-card-title">My Beloved Mom</h6>
-                    <p>Nothing so much to say, she is my world, my everything and my love to her is eternal</p>
-                </div>
-            </div><!-- end of blog wrapper -->
-
-            <!-- blog-wrapper -->
-            <div class="blog-card">
-                <div class="blog-card-header">
-                    <img src="assets/imgs/huj.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
-                </div>
-                <div class="blog-card-body">
-                    <h5 class="blog-card-title">Friends</h6>
-                    <p>I'am a single man (that doesn't meant im lonely). i'm very grateful that i have a lot of friends that always support me to fight against this cruel world</p>
-                </div>
-            </div><!-- end of blog wrapper -->
-
-        </div><!-- end of container -->
-    </section><!-- end of blog section -->
-
-      <!-- section -->
-      <section class="section-sm bg-primary">
-        <!-- container -->
-        <div class="container text-center text-sm-left">
-            <!-- row -->
-            <div class="row align-items-center">
-                <div class="col-sm offset-md-1 mb-4 mb-md-0">
-                    <h6 class="title text-light">Terimakasih sudah mampir!</h6>
-                    <p class="m-0 text-light">Jangan lupa berkunjung lagi ya!!!</p>
-                </div>
-                <div class="col-sm offset-sm-2 offset-md-3">
-                </div>
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </section> <!-- end of section -->
-    <!-- contact section -->
-<section class="section" id="contact">
-    <div class="container text-center">
-        <!-- contact form -->
-        <!-- contact section -->
-<section class="section" id="contact">
-    <div class="container text-center">
-        <p class="section-subtitle">How can you communicate?</p>
-        <div class="section-title mb-5">
-            <p>You can send me an email to <a href="mailto:rehandra09052004@gmail.com" style="font-family: inherit;">rehandra09052004@gmail.com</a> or DM my IG's <a href="https://www.instagram.com/handeraaa" style="font-family: inherit;">@handeraaa</a></p>
-        </div>
-        <!-- contact form -->
-        <form action="" class="contact-form col-md-10 col-lg-8 m-auto">
-            </div>  
-        </form><!-- end of contact form -->
-    </div><!-- end of container -->
-</section><!-- end of contact section -->
-
-
-
-    <!-- footer -->
-    <div class="container">
-        <footer class="footer">       
-            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com">DevCRUD</a></p>
-            <div class="social-links text-right m-auto ml-sm-auto">
-                <a href="https://www.facebook.com/han" class="link"><i class="ti-facebook"></i></a>
-                <a href="mailto:rehandra09052004@gmail.com.com" class="link"><i class="ti-google"></i></a>
-                <a href="https://www.instagram.com/handeraaa" class="link"><i class="ti-instagram"></i></a>
-
-            </div>
-        </footer>
-    </div> <!-- end of page footer -->
 	
 	<!-- core  -->
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
