--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div class="body">
                             <img src="assets/imgs/github.png" alt="" class="icon">
                             <h6 class="title" title="Progamming">Code</h6>
-                            <a href="https://github.com/Rehandra145" class="subtitle" style="margin-left: -25px;"><p>GitHub</p></a>
+                            <a href="https://github.com/Rehandra145" class="subtitle" style="margin-left: -24px;"><p style="font-size: 14px;">GitHub</p></a>
                         </div>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
                         <div class="body">
                             <img src="assets/imgs/homework.png"  class="icon">
                             <h6 class="title">Multimedia</h6>
-                            <a href="./tugas.html" class="subtitle" style="margin-left: -20px;"><p>Tugas</p></a>
+                            <a href="./tugas.html" class="subtitle" style="margin-left: -18px;"><p style="font-size: 13px;">Tugas</p></a>
                         </div>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                         <div class="body">
                             <img src="assets/imgs/instagram.png" alt="" class="icon">
                             <h6 class="title">Musik</h6>
-                            <a href="https://www.instagram.com/handeraaa" class="subtitle" style="margin-left: -28px;"><p>Sosmed</p></a>
+                            <a href="https://www.instagram.com/handeraaa" class="subtitle" style="margin-left: -24px;"><p style="font-size: 12px;">Sosmed</p></a>
                         </div>
                     </div>
                 </div>
