--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </h1>
             <p class="header-subtitle">I am a student | Riau University</p>            
             <p class="header-subtitle"></p>    
-            <div class="row" style="justify-content: center;">
+            <div class="row" id="hp" style="flex-direction: row; justify-content: center;">
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card-up">
                         <div class="body">
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- end of row -->        
+            </div><!-- end of row -->
             <!--<a href="#portfolio-section" class="btn btn-primary">Visit My Works</a>-->
 
         </div>              
