--- a/sismul1.html
+++ b/sismul1.html
@@ -165,11 +165,10 @@
             <tr>
                 <td>OGG</td>
                 <td>
-                    - Kualitas audio dan video yang baik.
+                    - Didukung oleh banyak browser modern (Chrome, Firefox, Opera).
                 </td>
                 <td>
-                    - Kurang dikenal dan kurang kompatibel dengan banyak perangkat.<br>
-                    - Dukungan perangkat keras yang terbatas.
+                    - Kualitas video menjadi lebih rendah.<br>
                 </td>
                 <td>Ya</td>
             </tr>
