--- a/sismul1.html
+++ b/sismul1.html
@@ -129,7 +129,7 @@
                 <td>
                     - Ukuran file yang besar.<br>
                 </td>
-                <td>Tidak (butuh plugin)</td>
+                <td>Tidak</td>
             </tr>
             <tr>
                 <td>FLV</td>
@@ -150,7 +150,7 @@
                 <td>
                     - Ukuran file yang besar.<br>
                 </td>
-                <td>Tidak (butuh plugin)</td>
+                <td>Tidak</td>
             </tr>
             <tr>
                 <td>WEBM</td>
