--- a/tugas.html
+++ b/tugas.html
@@ -69,6 +69,15 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-6 col-lg-3">
+                        <div class="service-card">
+                            <div class="body">
+                                <img src="assets/imgs/responsive.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" class="icon">
+                                <h6 class="title" title="Progamming">Sistem Multimedia</h6>
+                                <a href="./sismul3.html"><p class="subtitle">Video<br> Tugas Akhir.</p></a>
+                            </div>
+                        </div>
+                    </div>
                 </div><!-- end of row -->
             </div>
         </section><!-- end of service section -->
